Added a new feature comment

--- a/force-app/main/default/classes/CTDataCleanUpSchedule.cls
+++ b/force-app/main/default/classes/CTDataCleanUpSchedule.cls
@@ -9,6 +9,7 @@
  * 1.0   06-14-2021   ChangeMeIn@UserSettingsUnder.SFDoc   Initial Version
 **/
 // Adding new comment
+// Adding feature + comment in new branch
 public with sharing class CTDataCleanUpSchedule implements Schedulable{
     public static final String CRON = '0 0 2 * * ?';
     
